@@ -27,6 +27,7 @@ import io.cloudbeaver.service.DBWServletContext;
 import io.cloudbeaver.service.WebServiceBindingBase;
 import io.cloudbeaver.service.sql.impl.WebServiceSQL;
 import org.jkiss.code.NotNull;
+import org.jkiss.code.NotNullWhen;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.utils.CommonUtils;
@@ -163,7 +164,7 @@ public class WebServiceBindingSQL extends WebServiceBindingBase<DBWServiceSQL>
                     getSQLContext(env),
                     getArgumentVal(env, "resultsId"),
                     getArgumentVal(env, "lobColumnIndex"),
-                    getResultsRow(env, "row").get(0)))
+                    getResultsRow(env, "row").getFirst()))
             .dataFetcher("sqlReadLobValue", env ->
                 getService(env).readLobValue(
                     getSQLContext(env),
@@ -302,10 +303,10 @@ public class WebServiceBindingSQL extends WebServiceBindingBase<DBWServiceSQL>
 
     @NotNull
     public static WebSQLProcessor getSQLProcessor(WebConnectionInfo connectionInfo) throws DBWebException {
-        return getSQLConfiguration(connectionInfo.getSession()).getSQLProcessor(connectionInfo);
+        return getSQLProcessor(connectionInfo, true);
     }
 
-    @Nullable
+    @NotNullWhen("connect")
     public static WebSQLProcessor getSQLProcessor(WebConnectionInfo connectionInfo, boolean connect) throws DBWebException {
         return getSQLConfiguration(connectionInfo.getSession()).getSQLProcessor(connectionInfo, connect);
     }
@@ -357,16 +358,13 @@ public class WebServiceBindingSQL extends WebServiceBindingBase<DBWServiceSQL>
         return application.isMultiuser();
     }
 
-    private static class WebSQLConfiguration {
+    public static class WebSQLConfiguration {
         private final Map<WebConnectionInfo, WebSQLProcessor> processors = new HashMap<>();
 
         public WebSQLConfiguration() {
         }
 
-        WebSQLProcessor getSQLProcessor(WebConnectionInfo connectionInfo) throws DBWebException {
-            return WebServiceBindingSQL.getSQLProcessor(connectionInfo, true);
-        }
-
+        @NotNullWhen("connect")
         WebSQLProcessor getSQLProcessor(WebConnectionInfo connectionInfo, boolean connect) throws DBWebException {
             if (connectionInfo.getDataSource() == null) {
                 if (!connect) {
@@ -389,6 +387,7 @@ public class WebServiceBindingSQL extends WebServiceBindingBase<DBWServiceSQL>
             }
         }
 
+        @NotNull
         public WebSQLConfiguration dispose() {
             synchronized (processors) {
                 processors.forEach((connectionInfo, processor) -> processor.dispose());
@@ -400,6 +399,8 @@ public class WebServiceBindingSQL extends WebServiceBindingBase<DBWServiceSQL>
 
     ///////////////////////////////////////
     // Helpers
+
+    @Nullable
     public static WebSQLDataFilter getDataFilter(DataFetchingEnvironment env) {
         Map<String, Object> filterProps = getArgument(env, "filter");
         return filterProps == null ? null : new WebSQLDataFilter(filterProps);
